aucune erreur au validateur CSS + HTML

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	</head>
 	<body>
 		<div class="loadingspinnercontainer">
-			<img src="layout/composants/images/loadingspinner.svg" class="spinner"/>
+			<img src="layout/composants/images/loadingspinner.svg" class="spinner" alt/>
 		</div>
 		<header class="header">
 			<h1 class="header__logo header__logoindex">ohmyfood</h1>
@@ -23,10 +23,10 @@
 		<main>
 			<!-- Section localisation-->
 			<section class="localisation">
-				<div class="localisation__icon">
+				<header class="localisation__icon">
 				<i class="fas fa-map-marker-alt"></i>
-				</div>
-				<span class="localisation__text">Paris, Belleville</span>
+				</header>
+				<h6 class="localisation__text">Paris, Belleville</h6>
 			</section>
 			<!-- Section explore-->
 			<section class="explore">
